--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>800</width>
-    <height>600</height>
+    <height>593</height>
    </rect>
   </property>
   <property name="font">
@@ -16,7 +16,7 @@
    </font>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Whatever</string>
   </property>
   <property name="toolButtonStyle">
    <enum>Qt::ToolButtonStyle::ToolButtonIconOnly</enum>
@@ -38,9 +38,9 @@
    <widget class="QPushButton" name="play_pause">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>490</y>
-      <width>51</width>
+      <x>330</x>
+      <y>500</y>
+      <width>121</width>
       <height>41</height>
      </rect>
     </property>
@@ -51,10 +51,10 @@
    <widget class="QPushButton" name="previous_music">
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>490</y>
-      <width>80</width>
-      <height>24</height>
+      <x>250</x>
+      <y>500</y>
+      <width>71</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
@@ -64,10 +64,10 @@
    <widget class="QPushButton" name="next_music">
     <property name="geometry">
      <rect>
-      <x>610</x>
-      <y>480</y>
-      <width>80</width>
-      <height>24</height>
+      <x>460</x>
+      <y>500</y>
+      <width>71</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
@@ -77,40 +77,104 @@
    <widget class="QSlider" name="music_progress">
     <property name="geometry">
      <rect>
-      <x>250</x>
-      <y>480</y>
-      <width>321</width>
+      <x>10</x>
+      <y>460</y>
+      <width>641</width>
       <height>31</height>
      </rect>
+    </property>
+    <property name="maximum">
+     <number>200</number>
+    </property>
+    <property name="tracking">
+     <bool>true</bool>
     </property>
     <property name="orientation">
      <enum>Qt::Orientation::Horizontal</enum>
     </property>
    </widget>
-   <widget class="QSlider" name="volume">
-    <property name="geometry">
-     <rect>
-      <x>750</x>
-      <y>370</y>
-      <width>16</width>
-      <height>160</height>
-     </rect>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Orientation::Vertical</enum>
-    </property>
-   </widget>
    <widget class="QPushButton" name="view_toggle">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>470</y>
-      <width>80</width>
-      <height>24</height>
+      <x>10</x>
+      <y>500</y>
+      <width>91</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
      <string>切换视图</string>
+    </property>
+   </widget>
+   <widget class="QSlider" name="volume">
+    <property name="geometry">
+     <rect>
+      <x>599</x>
+      <y>510</y>
+      <width>181</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="maximum">
+     <number>100</number>
+    </property>
+    <property name="value">
+     <number>50</number>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Orientation::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="play_mode">
+    <property name="geometry">
+     <rect>
+      <x>120</x>
+      <y>500</y>
+      <width>91</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>顺序播放</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="current_duration">
+    <property name="geometry">
+     <rect>
+      <x>670</x>
+      <y>470</y>
+      <width>41</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>0:00</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="slash">
+    <property name="geometry">
+     <rect>
+      <x>710</x>
+      <y>470</y>
+      <width>16</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>/</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="total_duration">
+    <property name="geometry">
+     <rect>
+      <x>730</x>
+      <y>470</y>
+      <width>41</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>0:00</string>
     </property>
    </widget>
   </widget>
@@ -162,6 +226,9 @@
      <pointsize>11</pointsize>
     </font>
    </property>
+   <property name="iconVisibleInMenu">
+    <bool>false</bool>
+   </property>
   </action>
   <action name="action_add_folder">
    <property name="text">
@@ -171,6 +238,9 @@
     <font>
      <pointsize>11</pointsize>
     </font>
+   </property>
+   <property name="iconVisibleInMenu">
+    <bool>false</bool>
    </property>
   </action>
   <action name="action_manage_library">
@@ -182,6 +252,9 @@
      <pointsize>11</pointsize>
     </font>
    </property>
+   <property name="iconVisibleInMenu">
+    <bool>false</bool>
+   </property>
   </action>
   <action name="action_settings">
    <property name="text">
@@ -191,6 +264,9 @@
     <font>
      <pointsize>11</pointsize>
     </font>
+   </property>
+   <property name="iconVisibleInMenu">
+    <bool>false</bool>
    </property>
   </action>
   <action name="action_about">
@@ -202,6 +278,9 @@
      <pointsize>11</pointsize>
     </font>
    </property>
+   <property name="iconVisibleInMenu">
+    <bool>false</bool>
+   </property>
   </action>
   <action name="action_exit">
    <property name="text">
@@ -211,6 +290,12 @@
     <font>
      <pointsize>11</pointsize>
     </font>
+   </property>
+   <property name="menuRole">
+    <enum>QAction::MenuRole::TextHeuristicRole</enum>
+   </property>
+   <property name="iconVisibleInMenu">
+    <bool>false</bool>
    </property>
   </action>
  </widget>
