--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -2,18 +2,24 @@
 <ui version="4.0">
  <class>MainWindow</class>
  <widget class="QMainWindow" name="MainWindow">
+  <property name="windowModality">
+   <enum>Qt::WindowModality::NonModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>593</height>
+    <width>921</width>
+    <height>565</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <pointsize>12</pointsize>
    </font>
+  </property>
+  <property name="acceptDrops">
+   <bool>true</bool>
   </property>
   <property name="windowTitle">
    <string>Whatever</string>
@@ -24,158 +30,111 @@
   <property name="tabShape">
    <enum>QTabWidget::TabShape::Rounded</enum>
   </property>
-  <widget class="QWidget" name="centralwidget">
-   <widget class="QTableView" name="music_list">
+  <widget class="QWidget" name="top">
+   <widget class="QWidget" name="central_widget" native="true">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>0</x>
       <y>0</y>
-      <width>781</width>
-      <height>451</height>
+      <width>911</width>
+      <height>531</height>
      </rect>
     </property>
-   </widget>
-   <widget class="QPushButton" name="play_pause">
-    <property name="geometry">
-     <rect>
-      <x>330</x>
-      <y>500</y>
-      <width>121</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>播放</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="previous_music">
-    <property name="geometry">
-     <rect>
-      <x>250</x>
-      <y>500</y>
-      <width>71</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>上一曲</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="next_music">
-    <property name="geometry">
-     <rect>
-      <x>460</x>
-      <y>500</y>
-      <width>71</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>下一曲</string>
-    </property>
-   </widget>
-   <widget class="QSlider" name="music_progress">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>460</y>
-      <width>641</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="maximum">
-     <number>200</number>
-    </property>
-    <property name="tracking">
-     <bool>true</bool>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Orientation::Horizontal</enum>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="view_toggle">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>500</y>
-      <width>91</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>切换视图</string>
-    </property>
-   </widget>
-   <widget class="QSlider" name="volume">
-    <property name="geometry">
-     <rect>
-      <x>599</x>
-      <y>510</y>
-      <width>181</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="maximum">
-     <number>100</number>
-    </property>
-    <property name="value">
-     <number>50</number>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Orientation::Horizontal</enum>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="play_mode">
-    <property name="geometry">
-     <rect>
-      <x>120</x>
-      <y>500</y>
-      <width>91</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>顺序播放</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="current_duration">
-    <property name="geometry">
-     <rect>
-      <x>670</x>
-      <y>470</y>
-      <width>41</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>0:00</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="slash">
-    <property name="geometry">
-     <rect>
-      <x>710</x>
-      <y>470</y>
-      <width>16</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>/</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="total_duration">
-    <property name="geometry">
-     <rect>
-      <x>730</x>
-      <y>470</y>
-      <width>41</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>0:00</string>
-    </property>
+    <layout class="QVBoxLayout" name="verticalLayout">
+     <item>
+      <widget class="QTableView" name="music_list"/>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout">
+       <item>
+        <widget class="QSlider" name="music_progress">
+         <property name="maximum">
+          <number>200</number>
+         </property>
+         <property name="tracking">
+          <bool>true</bool>
+         </property>
+         <property name="orientation">
+          <enum>Qt::Orientation::Horizontal</enum>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="current_duration">
+         <property name="text">
+          <string>0:00</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="slash">
+         <property name="text">
+          <string>/</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="total_duration">
+         <property name="text">
+          <string>0:00</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout_2">
+       <item>
+        <widget class="QPushButton" name="view_toggle">
+         <property name="text">
+          <string>切换视图</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="play_mode">
+         <property name="text">
+          <string>顺序播放</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="previous_music">
+         <property name="text">
+          <string>上一曲</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="play_pause">
+         <property name="text">
+          <string>播放</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="next_music">
+         <property name="text">
+          <string>下一曲</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QSlider" name="volume">
+         <property name="maximum">
+          <number>100</number>
+         </property>
+         <property name="value">
+          <number>50</number>
+         </property>
+         <property name="orientation">
+          <enum>Qt::Orientation::Horizontal</enum>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+    </layout>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -183,7 +142,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>921</width>
      <height>26</height>
     </rect>
    </property>
@@ -216,7 +175,6 @@
    <addaction name="menu_file"/>
    <addaction name="menu_about"/>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
   <action name="action_add_file">
    <property name="text">
     <string>添加音乐文件...</string>
