--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -208,11 +208,11 @@
      <x>0</x>
      <y>0</y>
      <width>921</width>
-     <height>23</height>
+     <height>37</height>
     </rect>
    </property>
    <property name="nativeMenuBar">
-    <bool>false</bool>
+    <bool>true</bool>
    </property>
    <widget class="QMenu" name="menu_file">
     <property name="font">
