--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -238,7 +238,7 @@
          <item>
           <widget class="QPushButton" name="play_pause">
            <property name="enabled">
-            <bool>false</bool>
+            <bool>true</bool>
            </property>
            <property name="sizePolicy">
             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
