feat(ui): delete items

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -403,6 +403,15 @@
        <property name="acceptDrops">
         <bool>false</bool>
        </property>
+       <property name="showGrid">
+        <bool>false</bool>
+       </property>
+       <property name="cornerButtonEnabled">
+        <bool>false</bool>
+       </property>
+       <attribute name="verticalHeaderVisible">
+        <bool>false</bool>
+       </attribute>
       </widget>
      </item>
     </layout>
